src/test/resources/purescript_examples/passing/CheckFunction.purs.psi
Purescript File
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSModuleNameImpl(ModuleName)
        PSQualifiedImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSImportModuleNameImpl(ImportModuleName)
          PSQualifiedImpl(Qualified)
            PsiElement(proper name)('Prelude')
          PsiElement(whitespace)('\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSImportModuleNameImpl(ImportModuleName)
          PSQualifiedImpl(Qualified)
            PsiElement(proper name)('Control')
            PsiElement(.)('.')
            PsiElement(proper name)('Monad')
            PsiElement(.)('.')
            PsiElement(proper name)('Eff')
            PsiElement(.)('.')
            PsiElement(proper name)('Console')
          PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PSPositionedDeclarationRefImpl(PositionedDeclarationRef)
          PSValueRefImpl(ValueRef)
            PsiElement(identifier)('log')
        PsiElement())(')')
        PsiElement(whitespace)('\n\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PsiElement(identifier)('test')
        PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSParensImpl(Parens)
              PsiElement(()('(')
              PSValueImpl(Value)
                PSPrefixValueImpl(PrefixValue)
                  PSParensImpl(Parens)
                    PsiElement(()('(')
                    PSValueImpl(Value)
                      PSPrefixValueImpl(PrefixValue)
                        PsiElement(\)('\')
                        PSAbsImpl(Abs)
                          PSGenericIdentifierImpl(GenericIdentifier)
                            PsiElement(identifier)('x')
                            PsiElement(whitespace)(' ')
                        PsiElement(->)('->')
                        PsiElement(whitespace)(' ')
                        PSValueImpl(Value)
                          PSPrefixValueImpl(PrefixValue)
                            PSVarImpl(Var)
                              PSQualifiedImpl(Qualified)
                                PsiElement(identifier)('x')
                          PSIdentInfixImpl(IdentInfix)
                            PSQualifiedImpl(Qualified)
                              PsiElement(operator)('+')
                          PSValueImpl(Value)
                            PSPrefixValueImpl(PrefixValue)
                              PSNumericLiteralImpl(NumericLiteral)
                                PsiElement(float)('1.0')
                    PsiElement())(')')
                    PsiElement(whitespace)(' ')
                PSIdentInfixImpl(IdentInfix)
                  PSQualifiedImpl(Qualified)
                    PsiElement(operator)('>>>')
                    PsiElement(whitespace)(' ')
                PSValueImpl(Value)
                  PSPrefixValueImpl(PrefixValue)
                    PSParensImpl(Parens)
                      PsiElement(()('(')
                      PSValueImpl(Value)
                        PSPrefixValueImpl(PrefixValue)
                          PsiElement(\)('\')
                          PSAbsImpl(Abs)
                            PSGenericIdentifierImpl(GenericIdentifier)
                              PsiElement(identifier)('x')
                              PsiElement(whitespace)(' ')
                          PsiElement(->)('->')
                          PsiElement(whitespace)(' ')
                          PSValueImpl(Value)
                            PSPrefixValueImpl(PrefixValue)
                              PSVarImpl(Var)
                                PSQualifiedImpl(Qualified)
                                  PsiElement(identifier)('x')
                            PSIdentInfixImpl(IdentInfix)
                              PSQualifiedImpl(Qualified)
                                PsiElement(operator)('*')
                            PSValueImpl(Value)
                              PSPrefixValueImpl(PrefixValue)
                                PSNumericLiteralImpl(NumericLiteral)
                                  PsiElement(float)('2.0')
                      PsiElement())(')')
              PsiElement())(')')
              PsiElement(whitespace)(' ')
            PSNumericLiteralImpl(NumericLiteral)
              PsiElement(float)('4.0')
              PsiElement(whitespace)('\n\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PsiElement(identifier)('main')
        PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSVarImpl(Var)
              PSQualifiedImpl(Qualified)
                PsiElement(identifier)('log')
                PsiElement(whitespace)(' ')
            PSStringLiteralImpl(StringLiteral)
              PsiElement(string)('"Done"')
              PsiElement(whitespace)('\n')
